// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstructionsChooser renders correctly with AI and UPI 1`] = `
<Fragment>
  <Card>
    <CardBody>
      <div
        className="pf-c-content ocm-page"
      >
        <Title
          headingLevel="h3"
          size="2xl"
        >
          ARM Bare Metal
          : Select an installation type
        </Title>
        <div
          className="flex-container"
        >
          <Link
            className="ocm-c-ipi-upi-infra-card infra-card pf-c-card"
            to="/assisted-installer/clusters/~new"
          >
            <CardBadge
              isRecommended={true}
            />
            <CardBody
              className="ocm-c-ipi-upi-infra-card--body"
            >
              <ConnectedIcon
                alt="Installer-Provisioned Infrastructure"
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
              />
              <Title
                headingLevel="h3"
                size="lg"
              >
                Assisted Installer
              </Title>
               
              Install OpenShift on your own infrastructure with step-by-step guidance.
            </CardBody>
          </Link>
          <Link
            className="ocm-c-ipi-upi-infra-card infra-card pf-c-card"
            to="/install/arm/user-provisioned"
          >
            <CardBadge
              isHidden={true}
            />
            <CardBody
              className="ocm-c-ipi-upi-infra-card--body"
            >
              <UserIcon
                alt="User-Provisioned Infrastructure"
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
              />
              <Title
                headingLevel="h3"
                size="lg"
              >
                User-provisioned infrastructure
              </Title>
              Deploy an OpenShift cluster on infrastructure that you prepare and maintain.
            </CardBody>
          </Link>
        </div>
      </div>
    </CardBody>
  </Card>
</Fragment>
`;

exports[`InstructionsChooser renders correctly with AI enabled 1`] = `
<Fragment>
  <Card>
    <CardBody>
      <div
        className="pf-c-content ocm-page"
      >
        <Title
          headingLevel="h3"
          size="2xl"
        >
          Bare Metal
          : Select an installation type
        </Title>
        <div
          className="flex-container"
        >
          <Link
            className="ocm-c-ipi-upi-infra-card infra-card pf-c-card"
            to="/assisted-installer/clusters/~new"
          >
            <CardBadge
              isRecommended={true}
            />
            <CardBody
              className="ocm-c-ipi-upi-infra-card--body"
            >
              <ConnectedIcon
                alt="Installer-Provisioned Infrastructure"
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
              />
              <Title
                headingLevel="h3"
                size="lg"
              >
                Assisted Installer
              </Title>
               
              Install OpenShift on your own infrastructure with step-by-step guidance.
            </CardBody>
          </Link>
          <Link
            className="ocm-c-ipi-upi-infra-card infra-card pf-c-card"
            to="/install/metal/installer-provisioned"
          >
            <CardBody
              className="ocm-c-ipi-upi-infra-card--body"
            >
              <SyncAltIcon
                alt="Installer-Provisioned Infrastructure"
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
              />
              <Title
                headingLevel="h3"
                size="lg"
              >
                Installer-provisioned infrastructure
              </Title>
               
              Deploy an OpenShift cluster on infrastructure that the installation program provisions and the cluster maintains.
            </CardBody>
          </Link>
          <Link
            className="ocm-c-ipi-upi-infra-card infra-card pf-c-card"
            to="/install/metal/user-provisioned"
          >
            <CardBadge
              isHidden={true}
            />
            <CardBody
              className="ocm-c-ipi-upi-infra-card--body"
            >
              <UserIcon
                alt="User-Provisioned Infrastructure"
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
              />
              <Title
                headingLevel="h3"
                size="lg"
              >
                User-provisioned infrastructure
              </Title>
              Deploy an OpenShift cluster on infrastructure that you prepare and maintain.
            </CardBody>
          </Link>
        </div>
      </div>
    </CardBody>
  </Card>
</Fragment>
`;

exports[`InstructionsChooser renders correctly with default settings 1`] = `
<Fragment>
  <Card>
    <CardBody>
      <div
        className="pf-c-content ocm-page"
      >
        <Title
          headingLevel="h3"
          size="2xl"
        >
          AWS
          : Select an installation type
        </Title>
        <div
          className="flex-container"
        >
          <Link
            className="ocm-c-ipi-upi-infra-card infra-card pf-c-card"
            to="/install/aws/installer-provisioned"
          >
            <CardBadge
              isRecommended={true}
            />
            <CardBody
              className="ocm-c-ipi-upi-infra-card--body"
            >
              <SyncAltIcon
                alt="Installer-Provisioned Infrastructure"
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
              />
              <Title
                headingLevel="h3"
                size="lg"
              >
                Installer-provisioned infrastructure
              </Title>
               
              Deploy an OpenShift cluster on infrastructure that the installation program provisions and the cluster maintains.
            </CardBody>
          </Link>
          <Link
            className="ocm-c-ipi-upi-infra-card infra-card pf-c-card"
            to="/install/aws/user-provisioned"
          >
            <CardBadge
              isHidden={true}
            />
            <CardBody
              className="ocm-c-ipi-upi-infra-card--body"
            >
              <UserIcon
                alt="User-Provisioned Infrastructure"
                color="currentColor"
                noVerticalAlign={false}
                size="sm"
              />
              <Title
                headingLevel="h3"
                size="lg"
              >
                User-provisioned infrastructure
              </Title>
              Deploy an OpenShift cluster on infrastructure that you prepare and maintain.
            </CardBody>
          </Link>
        </div>
      </div>
    </CardBody>
  </Card>
</Fragment>
`;
